# ansible-inventory-to-schema

./: .gitignore  .gitpod.yml  README.md  pyproject.toml  taskfile.yml
.github/wokflows/: lint.yml
.github/workflows/: lint.yml
.gitpod/: Dockerfile
.taskfiles/: lint.yml  test.yml
src/ansible_inventory_to_schema/: cli.py
src/ansible_inventory_to_schema/commands/: generate.py
tests/: test_ansible_inventory_to_schema.py
tests/data/: hosts
